Getting geocoding working for the Charlestown flickr album
1) Adding code to scrape photos and their information from flickr and
pickle it in the correct record format
— Currently targeted for the Charlestown Lanterns album from the BPL
but can easily be extended
Album is
https://www.flickr.com/photos/boston_public_library/sets/721576224739024
47/
2) Adding MA specific resources to aid in geocoding
3) Adding a coder to geocode street text from the photos from
Charlestown Lanterns
4) Adding a coder to geocode certain points of interest from
Charlestown Lanterns
5) Added some backwards compatibility for the generate-geocodes file
—This is no longer used in my commit, but it doesn’t hurt to have it in
case people want to use the sf geocodes
6) Adding support for the —output_format = failed_geocode.txt' which
outputs photos that could not be geocoded
7) Added a method to calculate the lat lon in the middle of two
interesctions

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,11 @@
 .pydevproject
 .settings/
 
+#Flickr private information
+ma_specific_resources/flickr_private_info.txt
+
+#Contents of geocache.tgz
+geocache/
+
 #Ignore Python Build Files
 *.pyc
