--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,16 @@
-#Eclipse Metadata
+# Eclipse Metadata
 .project
 .pydevproject
 .settings/
 
-#Flickr private information
+# Flickr private information
 ma_specific_resources/flickr_private_info.txt
 
-#Contents of geocache.tgz
+# Contents of geocache.tgz
 geocache/
 
-#Ignore Python Build Files
+# Ignore Python Build Files
 *.pyc
+
+# Output of the python script before submission to the app_engine
+Lat_Lons.js
